--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "axios": "^1.2.0",
     "cheerio": "^1.0.0-rc.12",
+    "cloudscraper": "^4.6.0",
     "dotenv": "^16.0.3",
     "mongoose": "^6.7.5",
-    "node": "^19.2.0"
+    "node": "^19.2.0",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
