--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "mongoose": "^6.7.5",
     "node": "^19.2.0",
     "puppeteer": "18.1.0",
