--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "mongoose": "^6.7.5",
     "node": "^19.2.0",
+    "proxy-chain": "^2.2.0",
     "puppeteer": "18.1.0",
     "puppeteer-extra": "^3.3.4",
     "puppeteer-extra-plugin-stealth": "^2.11.1",
