--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@types/axios": "^0.14.0",
     "@types/node": "^18.11.10",
+    "log-timestamp": "^0.3.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   }
