--- a/package.json
+++ b/package.json
@@ -6,20 +6,20 @@
   "scripts": {
     "dev": "npx ts-node index.ts",
     "build": "npx tsc",
-    "start": "node dist/index.js",
+    "start": "node --max-old-space-size=8192 dist/index.js",
     "log": "yarn start > log.txt 2> error-log.txt",
     "clean": "rm -rf dist/**"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bottleneck": "^2.19.5",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "mongoose": "^6.7.5",
     "node": "^19.2.0",
+    "p-queue": "6.6.2",
     "proxy-chain": "^2.2.0",
     "puppeteer": "18.1.0",
     "puppeteer-extra": "^3.3.4",
