--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
-    "module": "CommonJS",
+    "module": "ES6",
     "esModuleInterop": true,
     "target": "es2022",
     "moduleResolution": "node",
