--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "npx tsc",
     "start": "node --max-old-space-size=8192 --trace-warnings dist/index.js",
     "log": "yarn start > log.txt 2> error-log.txt",
-    "clean": "rm -rf dist/**; rm matrix.npy; rm processed-maps.json; rm *.sav; rm cf.png; rm log.txt; rm error-log.txt"
+    "clean": "rm -rf dist/**; rm matrix.npy; rm processed-maps.json; rm *.sav; rm cf.png; rm log.txt; rm error-log.txt; rm frame.csv"
   },
   "author": "",
   "license": "ISC",
