--- a/betting_module/requirements.txt
+++ b/betting_module/requirements.txt
@@ -9,3 +9,7 @@ undetected-chromedriver
 tdqm
 jellyfish
 dateparser
+google-api-python-client 
+google-auth-httplib2 
+google-auth-oauthlib
+gspread
